--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: peakanno
 Title: Annotate Peak Calling Results
-Version: 0.0.7
+Version: 0.0.8
 Authors@R: 
     person(given = "Charles",
            family = "Joly Beauparlant",
@@ -14,7 +14,8 @@ Suggests:
     knitr,
     rmarkdown
 Imports:
-    tools
+    tools,
+    rtracklayer
 Depends:
     GenomicRanges
 VignetteBuilder: knitr
